deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: linklytics
  labels:
    app.kubernetes.io/part-of: linklytics
